Troubleshoot: Added canary marker to verify push

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="id">
 
 <head>
+  <!-- UI_OVERHAUL_CANARY_V1 -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Halal Track Pro - LPH UNISMA</title>
